--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
 /* Navbar */
 header{
+  font-family: 'Montserrat', sans-serif;
   background: #fff;
   border-bottom: 3px solid #50C7C7;
-  /*Your  code here again.*/
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .nav_links{
-  /*Your code here again.*/
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,7 +19,7 @@ header{
   text-decoration: none;
 }
 
-.nav_item a:hover, a:focus{
+.nav_item a:hover, a:focus, a:active{
   color: #50C7C7;
   text-decoration: underline;
   -webkit-text-decoration-style: dotted;
