--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ header{
   border-bottom: 3px solid #50C7C7;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .nav_links{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px;
 }
 
 .nav_item a{
