--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,20 @@ header{
   background: #fff;
   border-bottom: 3px solid #50C7C7;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .nav_links{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .nav_item a{
   color: black;
+  padding: 20px;
   text-decoration: none;
 }
 
