--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,15 @@ header{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav_links{
   display: flex;
   flex-direction: row;
-    align-items: center;
-    justify-content: center;
+/*     align-items: center;
+    justify-content: center; */
 }
 
 .nav_item a{
