--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@ header{
   font-family: 'Montserrat', sans-serif;
   background: #fff;
   border-bottom: 3px solid #50C7C7;
-  display: flex;
+/*   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 .nav_links{
