--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ header{
   font-family: 'Montserrat', sans-serif;
   background: #fff;
   border-bottom: 3px solid #50C7C7;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav_links{
