--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ header{
   border-bottom: 3px solid #50C7C7;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav_links{
