--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ header{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+/*   align-items: center; */
 }
 
 .nav_links{
