--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Navbar */
-header{
+/* header{
   font-family: 'Montserrat', sans-serif;
   background: #fff;
   border-bottom: 3px solid #50C7C7;
@@ -22,4 +22,33 @@ header{
   text-decoration: underline;
   -webkit-text-decoration-style: dotted;
           text-decoration-style: dotted;
+} */
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #090909;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
 }
