--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #090909;
+  background-color: #000000;
   width:100%;
   margin:0 auto;
   overflow: hidden;
@@ -11,6 +11,7 @@
   float: left;
   color: #f2f2f2;
   text-align: center;
+  width:150px;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
