--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,26 @@
   background-color: #000000;
   width:100%;
   margin:0 auto;
+  list-style:none;
   overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav li {
   color: #f2f2f2;
+  float:left;
   text-align: center;
   width:150px;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+}
+
+.topnav a {
+  display:block;
+  text-align:center;
+  width:100px; /* fixed width */
+  text-decoration:none; 
 }
 
 /* Change the color of links on hover */
