--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #0000ff;
+  background-color: #000000;
   width:100%;
   margin:0 auto;
   list-style:none;
