--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,27 @@
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #000000;
-  width:100%;
-  margin:0 auto;
-  list-style:none;
-  overflow: hidden;
+.nav{
+    border:1px solid #ccc;
+    border-width:1px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
 }
-
-/* Style the links inside the navigation bar */
-.topnav li {
-  color: #f2f2f2;
-  float:left;
-  text-align: center;
-  width:150px;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+.nav li{
+    display:inline;
 }
-
-.topnav a {
-  display:block;
-  text-align:center;
-  width:100px; /* fixed width */
-  text-decoration:none; 
+.nav a{
+    display:inline-block;
+    padding:10px;
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+.nav a:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
+.nav a.active {
   background-color: #4CAF50;
   color: white;
 }
