--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+    font-family: 'Playfair Display', serif;
+}
+
 #nav{
     border:1px solid #ccc;
     border-width:1px 0;
