--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-h1 {
+#myname {
     font-family: 'Playfair Display', serif;
     text-align: center;
     width: 50%;
