--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 #myname {
     font-family: 'Playfair Display', serif;
     text-align: center;
-    width: 50%;
+    width: 500px;
 }
 
 #nav{
