--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,180 @@
+html{
+    scroll-behavior: smooth;
+  }
+
 body {
     font-family: 'Raleway', sans-serif;
+    background-color: #f1f1ef;
 }
+
+.skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;
+    /*Your code here*/
+    opacity: 0;
+    position: absolute;
+    top: 40px;
+    }
+    
+.skip{
+    position: relative;
+}
+    
+.skip a:focus{
+    opacity: 1;
+}
+
+/* Header */
 
 #myname {
     font-family: 'Playfair Display', serif;
     text-align: center;
-    width: 500px;
+    width: 100%;
+    padding: 20px 0;
 }
 
-#nav{
-    border:1px solid #ccc;
+h1 {
+    font-size: 50px;
+    color: #c19434;
+}
+
+/* Navigation */
+
+.nav{
+    border:1px solid #f1f1ef;
+    background-color: #34421e;
     border-width:1px 0;
     list-style:none;
     margin:0;
     padding:0;
     text-align:center;
 }
-#nav li{
-    display:inline;
+.nav li{
+    display:flex;
+    flex-direction: column;
 }
-#nav a{
-    display:inline-block;
+.nav a{
+    /* display:inline-block; */
+    text-decoration: none;
+    font-size: 1.3em;
     padding:10px;
+    color: #f1f1ef;
 }
 
-/* Change the color of links on hover */
-#nav a:hover {
-  background-color: #ddd;
+.nav a:hover {
+  background-color: #f1f1ef;
+  text-decoration-line: underline;
   color: black;
+}
+
+.nav .current {
+    background-color: #c19434;
+    color: #f1f1ef;
+    text-decoration-line: underline;
+    border: 4px solid#34421e;
+}
+
+/* Home */
+
+.mainsection {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.mainsection-item {
+    padding: 20px;
+}
+
+.mainsection-item img {
+    height: 50vh;
+}
+
+.mainsection-item p {
+    font-size: 20px;
+}
+
+/* About */
+
+.container {
+    display: grid;
+    grid-template-columns: 250px 250px;
+    grid-gap: 10px;
+    background-color: #f1f1ef;
+    padding: 20px;
+    justify-content: center;
+    /* justify-content: space-evenly; */
+    align-content: center;
+  }
+  
+.container > .grid-item {
+    /* text-align: center; */
+    padding: 20px;
+    font-size: 20px;
+}
+
+.grid-item img {
+    width: 250px;
+    height: 250px;
+    max-width: 100%;
+    border: 10px solid #c19434;
+}
+
+#description1 p {
+    text-align: right;
+    color: #34421e;
+}
+
+#description2 p {
+    text-align: left;
+}
+
+/* Photography */
+
+.gallery {
+    display: flex;
+    background-color:#c19434;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.gallery > .gallery-item {
+    margin: 10px;
+}
+
+.gallery .gallery-item img {
+    width: 200px;
+    height: 200px;
+    border: 5px solid #fff;
+}
+
+.photos .phototext {
+    text-align: center;
+    font-size: 1.5em;
+    padding: 10px;
+}
+
+/* Connect */
+
+.contactinfo {
+    padding: 30px;
+}
+
+/* Footer */
+
+footer {
+    border:1px solid #f1f1ef;
+    background-color: #34421e;
+    border-width:1px 0;
+}
+
+footer p{
+    color: #f1f1ef;
 }
