--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ h1 {
   }
   
 .container > .grid-item {
-    /* text-align: center; */
+    text-align: center;
     padding: 20px;
     font-size: 20px;
 }
@@ -129,11 +129,14 @@ h1 {
 
 #description1 p {
     text-align: right;
+    font-size: 15px;
     color: #34421e;
 }
 
 #description2 p {
     text-align: left;
+    font-size: 15px;
+    color: #34421e;
 }
 
 /* Photography */
@@ -160,7 +163,7 @@ h1 {
 
 .photos .phototext {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 15px;
     padding: 10px;
 }
 
