--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ h1 {
     /* display:inline-block; */
     text-decoration: none;
     font-size: 1em;
-    padding: 10px;
+    padding: 5px;
     color: #f1f1ef;
 }
 
@@ -116,14 +116,14 @@ h1 {
   
 .container > .grid-item {
     text-align: center;
-    padding: 20px;
-    font-size: 20px;
+    padding: 10px;
+    font-size: 10px;
 }
 
 .grid-item img {
-    width: 250px;
-    height: 250px;
-    max-width: 100%;
+    width: 50%;
+    height: 50%;
+    /* max-width: 100%; */
     border: 10px solid #c19434;
 }
 
