--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,12 @@ h1 {
 
 .grid-item img {
     width: 40%;
-    height: 40%;
     min-width: 100px;
     border: 10px solid #c19434;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 #description1 p {
