--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
     -webkit-transition: top 1s ease-out;
     transition: top 1s ease-out;
     z-index: 1;
-    /*Your code here*/
     opacity: 0;
     position: absolute;
     top: 40px;
@@ -29,12 +28,15 @@ body {
     opacity: 1;
 }
 
+a {
+    text-decoration:none;
+ }
+
 /* Header */
 
 #myname {
     font-family: 'Playfair Display', serif;
     text-align: center;
-    /* width: 100%; */
     padding: 20px 0;
 }
 
@@ -46,21 +48,20 @@ h1 {
 /* Navigation */
 
 .nav{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     border:1px solid #f1f1ef;
     background-color: #34421e;
     border-width:1px 0;
     list-style:none;
     margin:0;
     padding:10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .nav li{
     text-align: center;
 }
 .nav a{
-    /* display:inline-block; */
     text-decoration: none;
     font-size: 1em;
     padding: 5px;
@@ -88,7 +89,7 @@ h1 {
 }
 
 .mainsection-item {
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
 
@@ -108,7 +109,6 @@ h1 {
     background-color: #f1f1ef;
     padding: 20px;
     justify-content: center;
-    /* justify-content: space-evenly; */
     align-content: center;
   }
   
@@ -128,6 +128,28 @@ h1 {
     width: 50%;
 }
 
+/*Keyframes for animation*/
+
+@-webkit-keyframes flying{
+    0%   {left:-10vw; top:0px}
+    100% {left:100vw; top:0px;}
+}
+  
+@keyframes flying{
+        0%   {left:-30vw; top:0px}
+        100% {left:100vw; top:0px;}
+} 
+  
+  #anim{
+     padding: 10px;
+     max-width: 100px;
+     position: relative;
+     animation-name: flying;
+     animation-duration: 10s;
+     animation-timing-function: linear;
+     animation-iteration-count: 10;
+  }
+
 #description1 p {
     text-align: right;
     font-size: 15px;
@@ -140,7 +162,7 @@ h1 {
     color: #34421e;
 }
 
-/* Photography */
+/* Photos */
 
 .gallery {
     display: flex;
@@ -158,7 +180,7 @@ h1 {
 
 .gallery .gallery-item img {
     width: 200px;
-    height: 200px;
+    /* height: 200px; */
     border: 5px solid #fff;
 }
 
@@ -168,7 +190,97 @@ h1 {
     padding: 10px;
 }
 
+/* Resume */
+
+h3 {
+    display: none;
+}
+
+.parallax {
+    background-image: url("../images/background.jpg");
+    min-height: 200px; 
+  
+    /* Parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .flip-card {
+    margin: auto;
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #34421e;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
 /* Connect */
+
+h4 {text-align: center;}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #34421e;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+  
+input[type=submit] {
+    background-color: #c19434;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+input[type=submit]:hover {
+    background-color: #34421e;
+}
+  
+.contactform {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
 
 .contactinfo {
     padding: 30px;
@@ -184,4 +296,93 @@ footer {
 
 footer p{
     color: #f1f1ef;
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 800px){
+    #anim{
+        padding: 10px;
+        max-width: 200px;
+        position: relative;
+        animation-name: flying;
+        animation-duration: 8s;
+        animation-timing-function: linear;
+        animation-iteration-count: 10;
+     }
+
+     #main-index{
+         background-color:  #c19434;
+     }
+
+     .container {
+        grid-template-columns: auto;
+        background-color: #f1f1ef;
+        padding-left: 200px;
+        padding-right: 200px;
+      }
+
+      #main p {
+          text-align: center;
+      }
+    
+    .grid-item img {
+        width: 100%;
+    }
+
+    .mainsection-item img {
+        height: 50vh;
+        position: relative;
+    }
+
+    .mainsection-item p {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+}
+
+@media screen and (prefers-reduced-motion: reduce){
+    html{
+        scroll-behavior: auto; /* Removes scroll animation */
+    }
+    
+    .skip a{
+      -webkit-transition: none; /* sets to default setting */
+      transition: none;        /* sets to default setting */
+     }
+    
+    /*Turn off parallax*/
+    header{
+      background-attachment: initial;
+    }
+
+    #anim{
+        position: relative;
+        animation-name: flying;
+        animation: none;
+        width: 200px;
+        margin: auto;
+     }
+
+    }
+
+@media print {
+    body {background: transparent;}
+
+    #anim{
+        display: block;
+        margin: auto;
+        animation-name: flying;
+        animation: none;
+    }
+
+    #main-resume div{
+        display: none;
+    }
+
+    h3 {
+        display: block;
+        text-align: center;
+    }
 }
