--- a/css/style.css
+++ b/css/style.css
@@ -150,13 +150,13 @@ h1 {
      animation-iteration-count: 10;
   }
 
-#description1 p {
+#des1 p {
     text-align: right;
     font-size: 15px;
     color: #34421e;
 }
 
-#description2 p {
+#des2 p {
     text-align: left;
     font-size: 15px;
     color: #34421e;
@@ -341,14 +341,14 @@ footer p{
     }
 
     /* About */
-    #description1 p {
+    #des1 p {
         text-align: right;
         font-size: 30px;
         color: black;
         padding: 10px;
     }
     
-    #description2 p {
+    #des2 p {
         text-align: left;
         font-size: 30px;
         color: black;
@@ -387,12 +387,12 @@ footer p{
         padding-right: 200px;
     }
 
-    #description1 p {
+    #des1 p {
         text-align: center;
         font-size: 20px;
     }
     
-    #description2 p {
+    #des2 p {
         text-align: left;
         font-size: 20px;
     }
