--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,9 @@ h2 {
 
 /* Connect */
 
-h3 {text-align: center;}
+#main-resume p {
+    text-align: center;
+}
 
 input[type=text], select, textarea {
     width: 100%;
