--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,8 @@ footer p{
     #main p {
        color: black;
        text-align: center;
+       margin-left: 50px;
+       margin-right: 50px;
     }
 
     .mainsection-item img {
