--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ h1 {
 
 .gallery {
     display: flex;
-    background-color:#A68263;
+    background-color:#996515;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
