--- a/css/style.css
+++ b/css/style.css
@@ -150,13 +150,13 @@ h1 {
      animation-iteration-count: 10;
   }
 
-#des1 p {
+.des1 p {
     text-align: right;
     font-size: 15px;
     color: #34421e;
 }
 
-#des2 p {
+.des2 p {
     text-align: left;
     font-size: 15px;
     color: #34421e;
@@ -347,14 +347,14 @@ footer p{
     }
 
     /* About */
-    #des1 p {
+    .des1 p {
         text-align: right;
         font-size: 30px;
         color: black;
         padding: 10px;
     }
     
-    #des2 p {
+    .des2 p {
         text-align: left;
         font-size: 30px;
         color: black;
@@ -393,12 +393,12 @@ footer p{
         padding-right: 200px;
     }
 
-    #des1 p {
+    .des1 p {
         text-align: center;
         font-size: 20px;
     }
     
-    #des2 p {
+    .des2 p {
         text-align: left;
         font-size: 20px;
     }
